--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_label">#E0E0E0</color>
+    <color name="background_value">#F5F5F5</color>
+    <color name="background_nan_warning">#FFCCCC</color>
+    <color name="background_info">#E3F2FD</color>
+    <color name="background_separator">#F0F0F0</color>
 </resources>
